More renaming and refactoring. (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1555 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -93,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Configuration.cs" />
+    <Compile Include="Core\EmptyStorableClassAttribute.cs" />
+    <Compile Include="Core\TypeExtensions.cs" />
     <Compile Include="Core\TypeMapping.cs" />
     <Compile Include="Core\TypeStringBuilder.cs" />
     <Compile Include="Default\Decomposers\ArrayDecomposer.cs" />
@@ -111,9 +113,9 @@
     <Compile Include="Default\Xml\Compact\NumberArray2XmlFormatterBase.cs" />
     <Compile Include="Core\DataMemberAccessor.cs" />
     <Compile Include="Default\Xml\Compact\IntList2XmlFormatter.cs" />
-    <Compile Include="Default\Xml\Primitive\Double2XmlFormatterBase.cs" />
-    <Compile Include="Default\Xml\Primitive\Decimal2XmlFormatterBase.cs" />
-    <Compile Include="Default\Xml\Primitive\Float2XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\Double2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Decimal2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Float2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\UInt2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\Long2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\ULong2XmlFormatter.cs" />
