--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -134,20 +134,20 @@
     <Compile Include="Core\Deserializer.cs" />
     <Compile Include="Core\Tag.cs" />
     <Compile Include="Interfaces\IFormat.cs" />
-    <Compile Include="Interfaces\FormatBase.cs" />
+    <Compile Include="Core\FormatBase.cs" />
     <Compile Include="Interfaces\IDecomposer.cs" />
     <Compile Include="Interfaces\IFormatter.cs" />
     <Compile Include="Core\ConfigurationService.cs" />
-    <Compile Include="Interfaces\Tokens\MetaInfoBeginToken.cs" />
-    <Compile Include="Interfaces\Tokens\MetaInfoEndToken.cs" />
-    <Compile Include="Interfaces\Tokens\ISerializationToken.cs" />
-    <Compile Include="Interfaces\Tokens\SerializationTokenBase.cs" />
-    <Compile Include="Interfaces\Tokens\CompositeTokenBase.cs" />
-    <Compile Include="Interfaces\Tokens\BeginToken.cs" />
-    <Compile Include="Interfaces\Tokens\EndToken.cs" />
-    <Compile Include="Interfaces\Tokens\PrimitiveToken.cs" />
-    <Compile Include="Interfaces\Tokens\ReferenceToken.cs" />
-    <Compile Include="Interfaces\Tokens\NulLReferenceToken.cs" />
+    <Compile Include="Core\Tokens\MetaInfoBeginToken.cs" />
+    <Compile Include="Core\Tokens\MetaInfoEndToken.cs" />
+    <Compile Include="Interfaces\ISerializationToken.cs" />
+    <Compile Include="Core\Tokens\SerializationTokenBase.cs" />
+    <Compile Include="Core\Tokens\CompositeTokenBase.cs" />
+    <Compile Include="Core\Tokens\BeginToken.cs" />
+    <Compile Include="Core\Tokens\EndToken.cs" />
+    <Compile Include="Core\Tokens\PrimitiveToken.cs" />
+    <Compile Include="Core\Tokens\ReferenceToken.cs" />
+    <Compile Include="Core\Tokens\NullReferenceToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Serializer.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
