hardwired implementation of CreateReplacement. (ticket #580)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1558 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SGA.Hardwired/3.3/HeuristicLab.SGA.Hardwired-3.3.csproj
+++ b/sources/HeuristicLab.SGA.Hardwired/3.3/HeuristicLab.SGA.Hardwired-3.3.csproj
@@ -67,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateReplacement.cs" />
+    <Compile Include="CreateReplacementHardWired.cs" />
     <Compile Include="CreateChildrenHardWired.cs" />
     <Compile Include="HeuristicLabSGAHardwiredPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
