Added functionality: Markers on every datapoint. (#581)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1559 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -109,6 +109,7 @@
     <Compile Include="LabelProvider\ILabelProvider.cs" />
     <Compile Include="IMouseEventListener.cs" />
     <Compile Include="Legend\LegendItem.cs" />
+    <Compile Include="MarkerShape.cs" />
     <Compile Include="MaxAggregator.cs" />
     <Compile Include="MinAggregator.cs" />
     <Compile Include="Options\OptionsDialog.cs">
