Stronger typing for formatters with the help of generics. Separate format and serial data type. (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1564 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -94,9 +94,12 @@
   <ItemGroup>
     <Compile Include="Core\Configuration.cs" />
     <Compile Include="Core\EmptyStorableClassAttribute.cs" />
+    <Compile Include="Core\FormatBase.cs" />
+    <Compile Include="Core\FormatterBase.cs" />
     <Compile Include="Core\TypeExtensions.cs" />
     <Compile Include="Core\TypeMapping.cs" />
     <Compile Include="Core\TypeStringBuilder.cs" />
+    <Compile Include="Core\GeneratorBase.cs" />
     <Compile Include="Default\Decomposers\ArrayDecomposer.cs" />
     <Compile Include="Default\Decomposers\EnumerableDecomposer.cs" />
     <Compile Include="Default\Decomposers\EnumDecomposer.cs" />
@@ -105,7 +108,9 @@
     <Compile Include="Default\Decomposers\StorableDecomposer.cs" />
     <Compile Include="Default\Decomposers\TypeDecomposer.cs" />
     <Compile Include="Default\Decomposers\X2StringDecomposer.cs" />
-    <Compile Include="Default\ViewOnly\ViewOnlyFormat.cs" />
+    <Compile Include="Default\ViewOnly\ViewOnlyFormat.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Default\Xml\Compact\IntArray2XmlFormatters.cs" />
     <Compile Include="Default\Xml\Compact\DoubleArray2XmlFormatters.cs" />
     <Compile Include="Default\Xml\Compact\DoubleList2XmlFormatter.cs" />
@@ -113,6 +118,7 @@
     <Compile Include="Default\Xml\Compact\NumberArray2XmlFormatterBase.cs" />
     <Compile Include="Core\DataMemberAccessor.cs" />
     <Compile Include="Default\Xml\Compact\IntList2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\XmlString.cs" />
     <Compile Include="Default\Xml\Primitive\Double2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\Decimal2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\Float2XmlFormatter.cs" />
@@ -133,8 +139,8 @@
     <Compile Include="HeuristicLabPersistencePlugin.cs" />
     <Compile Include="Core\Deserializer.cs" />
     <Compile Include="Core\Tag.cs" />
+    <Compile Include="Interfaces\ISerialData.cs" />
     <Compile Include="Interfaces\IFormat.cs" />
-    <Compile Include="Core\FormatBase.cs" />
     <Compile Include="Interfaces\IDecomposer.cs" />
     <Compile Include="Interfaces\IFormatter.cs" />
     <Compile Include="Core\ConfigurationService.cs" />
