Include <SubType> tags (reverts part of r1541) (#579)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1572 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -92,17 +92,20 @@
     <Compile Include="FunctionLibraryInjector.cs" />
     <Compile Include="OffspringSelectionGP.cs" />
     <Compile Include="OffSpringSelectionGpEditor.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="OffSpringSelectionGpEditor.Designer.cs">
       <DependentUpon>OffSpringSelectionGpEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="ProblemInjector.cs" />
     <Compile Include="ProblemInjectorView.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ProblemInjectorView.Designer.cs">
       <DependentUpon>ProblemInjectorView.cs</DependentUpon>
     </Compile>
     <Compile Include="StandardGpEditor.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="StandardGpEditor.Designer.cs">
       <DependentUpon>StandardGpEditor.cs</DependentUpon>
