--- a/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/HeuristicLab.Hive.Server.ADODataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.ADODataAccess/3.2/HeuristicLab.Hive.Server.ADODataAccess-3.2.csproj
@@ -93,6 +93,7 @@
     <Compile Include="HiveServerADODataAccessPlugin.cs" />
     <Compile Include="JobAdapter.cs" />
     <Compile Include="JobResultsAdapter.cs" />
+    <Compile Include="PluginInfoAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -100,6 +101,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="ResourceAdapter.cs" />
+    <Compile Include="TableAdapterWrapper\ClientAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\ClientGroupAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\ClientGroup_ResourceAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\RequiredPluginsAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\PluginInfoAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\ResourceAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\JobResultsAdapterWrapper.cs" />
+    <Compile Include="TableAdapterWrapper\JobAdapterWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
