--- a/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Server.DataAccess/3.2/HeuristicLab.Hive.Server.DataAccess-3.2.csproj
@@ -75,6 +75,7 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="IPluginInfoAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HiveServerDataAccessPlugin.cs" />
     <Compile Include="IClientAdapter.cs" />
