Refactored ResourceAdapter (polymorphic implementation) (#372)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1597 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.DataAccess/3.2/HeuristicLab.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.DataAccess/3.2/HeuristicLab.DataAccess-3.2.csproj
@@ -94,6 +94,7 @@
     <None Include="HeuristicLab.snk" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IPolymorphicDataAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataAccessPlugin.cs" />
     <Compile Include="Interfaces\ISession.cs" />
