--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -102,14 +102,14 @@
     <Compile Include="Core\GeneratorBase.cs" />
     <Compile Include="Default\DebugString\DebugString.cs" />
     <Compile Include="Default\DebugString\DebugStringFormat.cs" />
-    <Compile Include="Default\DebugString\ValueType2DebugStringFormatterBase.cs" />
-    <Compile Include="Default\DebugString\String2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\Bool2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\Int2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\Doubld2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\DateTime2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\Type2DebugStringFormatter.cs" />
-    <Compile Include="Default\DebugString\Float2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\ValueType2DebugStringFormatterBase.cs" />
+    <Compile Include="Default\DebugString\Formatters\String2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\Bool2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\Int2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\Doubld2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\DateTime2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\Type2DebugStringFormatter.cs" />
+    <Compile Include="Default\DebugString\Formatters\Float2DebugStringFormatter.cs" />
     <Compile Include="Default\DebugString\DebugStringGenerator.cs" />
     <Compile Include="Default\Decomposers\ArrayDecomposer.cs" />
     <Compile Include="Default\Decomposers\Number2StringConverter.cs" />
@@ -128,6 +128,7 @@
     <Compile Include="Default\Xml\Compact\NumberArray2XmlFormatterBase.cs" />
     <Compile Include="Core\DataMemberAccessor.cs" />
     <Compile Include="Default\Xml\Compact\IntList2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\XmlStrings.cs" />
     <Compile Include="Default\Xml\XmlString.cs" />
     <Compile Include="Default\Xml\Primitive\Double2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\Decimal2XmlFormatter.cs" />
