Rename config property to adhere to coding conventions. (#524)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1622 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/3.2/app.config
+++ b/sources/HeuristicLab.Tracing/3.2/app.config
@@ -7,7 +7,7 @@
   </configSections>
   <userSettings>
     <HeuristicLab.Tracing.Properties.Settings>
-      <setting name="log4netConfigFile" serializeAs="String">
+      <setting name="TracingLog4netConfigFile" serializeAs="String">
         <value />
       </setting>
     </HeuristicLab.Tracing.Properties.Settings>
