--- a/sources/HeuristicLab.Tracing/3.2/Properties/Settings.settings
+++ b/sources/HeuristicLab.Tracing/3.2/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeuristicLab.Tracing.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="log4netConfigFile" Type="System.String" Scope="User">
+    <Setting Name="TracingLog4netConfigFile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
