--- a/sources/HeuristicLab.Security.Contracts/3.2/HeuristicLab.Security.Contracts-3.2.csproj
+++ b/sources/HeuristicLab.Security.Contracts/3.2/HeuristicLab.Security.Contracts-3.2.csproj
@@ -14,6 +14,8 @@
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
