Add missing attributes and create type hierarchy for formatters. (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1659 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -137,6 +137,9 @@
     <Compile Include="Default\Xml\Compact\NumberArray2XmlFormatterBase.cs" />
     <Compile Include="Default\Decomposers\Storable\DataMemberAccessor.cs" />
     <Compile Include="Default\Xml\Compact\IntList2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\PrimitiveXmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Compact\CompactXmlFormatterBase.cs" />
     <Compile Include="Default\Xml\Primitive\Char2XmlFormatter.cs" />
     <Compile Include="Default\Xml\XmlStringConstants.cs" />
     <Compile Include="Default\Xml\XmlString.cs" />
