FixedSGAMain, added support for engine abortion. (ticket #580)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1661 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
+++ b/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FixedAllSGAMain.cs" />
     <Compile Include="CreateReplacement.cs" />
     <Compile Include="CreateChildrenHardWired.cs" />
     <Compile Include="FixedSGAMain.cs" />
